Initial commit: ALBJ Discord Bot with comprehensive deployment configuration

--- a/env.example
+++ b/env.example
@@ -1,8 +1,9 @@
 # ALBJ Discord Bot Environment Variables
 
 # Discord Configuration
-DISCORD_BOT_TOKEN=your_discord_bot_token_here
-DISCORD_CLIENT_ID=your_discord_client_id_here
+DISCORD_TOKEN=your_discord_bot_token_here
+CLIENT_ID=your_discord_client_id
+GUILD_ID=your_discord_guild_id
 
 # Cross-platform Integration (Optional)
 TELEGRAM_BOT_TOKEN=7604576999:AAHk7EqYFBM2jNGPSp4UFLnEEidWJgwYGyI
@@ -21,7 +22,7 @@ NODE_ENV=production
 PORT=3000
 
 # Database (Future use)
-# DATABASE_URL=your_database_url_here
+DATABASE_PATH=./data/user_engagement.db
 
 # Analytics (Future use)
 # ANALYTICS_KEY=your_analytics_key_here 
